# yipyap

./: .cursorrules  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cpu  LICENSE.md  README.md  TODO.md  TODO.md   docker-compose.cpu.yml  docker-compose.yml  entrypoint.sh  move_furry.py  package-lock.json  package.json  pyproject.toml  requirements.cpu.txt  requirements.txt  run_production.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
app/: README.md  __init__.py  __main__.py  caption_handler.py  data_access.py  drhead_loader.py  image_handler.py  main.py  models.py  utils.py
app/caption_formats/: __init__.py  e621.py
app/caption_generation/: __init__.py  base.py  jtp2.py  plugin_loader.py  utils.py  wdv3.py
backend/: Cargo.toml  DEV.md
backend/benches/: bench_data_access.rs
backend/src/: data_access.rs  handlers.rs  lib.rs  main.rs  models.rs  utils.rs
backend/tests/: integration_test.rs
docs/: aria-labels.md  backdrop-filter.md  breadcrumb.md  content-types.md  drag-and-drop.md  file-formats.md  linting.md  logging.md  notifications.md  overlay-transitions.md  passive-events.md  settings.md  testing.md  theming.md  tooltip-troubleshooting.md  tooltip.md  transformations.md  translations.md
frontend/: package.json  vite.config.ts
frontend/docs/: aria-labels.md  content-types.md  linting.md  passive-events.md  settings.md  testing.md  theming.md  tooltip-troubleshooting.md
frontend/src/: index.html  main.tsx  router.ts
src/: App.tsx  directives.tsx  index.html  lib.rs  main.rs  main.tsx  models.ts  router.ts  styles.css  themes.css  types.d.ts  types.ts  utils.ts
src/api/: routes.rs
src/components/: ErrorBoundary.css  ErrorBoundary.tsx  FadeIn.css  FadeIn.tsx  Settings.css  TextArea.tsx  icons.tsx  reactive-utils.test.tsx  reactive-utils.tsx
src/composables/: DragAndDrop.tsx  useCaptionHistory.tsx  useConnectionStatus.test.tsx  useConnectionStatus.ts  useDoubleTap.ts  useDragAndDrop.test.tsx  useDragAndDrop.tsx  useE621Editor.tsx  useFileUpload.tsx  useGalleryEffects.tsx  useGalleryScroll.tsx  useGalleryUI.tsx  useGlobalEscapeManager.tsx  useImageLoader.ts  usePanZoom.ts  useTagAutocomplete.tsx  useTagManagement.tsx  useTomlEditor.tsx  useTranslations.ts
src/contexts/: GalleryContext.tsx  app.tsx  (+13 more)
templates/: base.html  error.html  gallery.html  image_view.html
tests/: error_test.rs  image_test.rs  models_test.rs  routes_test.rs
(+355 files in other folders)
