[package]
name = "yipyap"
version = "0.1.0"
edition = "2024"
authors = ["elias-gaeros", "_ka_de"]
description = "Rust backend server for yipyap image browsing and caption management"
readme = "README.md"
license = "MIT"
repository = "https://github.com/rakki194/yipyap"

[dependencies]
# Web framework and HTTP server
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "cors",
    "compression-gzip",
] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }

# Data serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
yaml-rust2 = "0.10.0"

# Database and caching
rusqlite = { version = "0.34.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"

# Image processing
image = "0.25.5"
webp = "0.3.0"
imageproc = "0.25.0"
thumbhash = "0.1.0"

# Path handling and file system operations
walkdir = "2.5.0"
tempfile = "3.18.0"
memmap2 = "0.9.5"
rayon = "1.10.0"
crossbeam = "0.8.4"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.97"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
console-subscriber = "0.4.1"

# Configuration
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml", "env"] }

# Utilities
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
regex = "1.11.1"
base64 = "0.22.1"
mime = "0.3.17"
mime_guess = "2.0.5"
bytes = "1.10.1"
futures = "0.3.31"
once_cell = "1.21.0"
parking_lot = "0.12.3"
lru = "0.13.0"
dashmap = "6.1.0"

[[bin]]
name = "yipyap"
path = "src/main.rs"

[dev-dependencies]
tower-test = "0.4"
