[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
image = "0.25.5"
walkdir = "2.5.0"
log = "0.4.22"
env_logger = "0.11.5"
mime = "0.3.17"
anyhow = "1.0.93"
chrono = "0.4.38"
actix-files = "0.6.6"
fern = "0.7.0"
